--- a/pubman/pubman_presentation/src/main/webapp/header/ui/SearchMenu.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/header/ui/SearchMenu.jspf
@@ -32,7 +32,6 @@
 
 <div id="searchMenuSkipLinkAnchor" class="free_area0 searchMenu">
 	<!-- search Menu starts here -->
-
 	<span class="std_imgArea quickSearchIcon">&#160;</span>
 	<span class="large_area0 quickSearchMenu">
 		<h:inputText id="quickSearchString" styleClass="large_txtInput quickSearchTextInput" value="#{Search.searchString}"/>
@@ -43,21 +42,12 @@
 	</span>
 	<h:commandButton id="btnQuickSearchStart" styleClass="xSmall_txtBtn activeButton quickSearchBtn" title="#{tip.adv_search_btStart}" action="#{Search.startSearch}" value="#{lbl.quick_search_btnStart}"/>
 
-
-
-
-	<%--<h:outputLink styleClass="medium_area0_p3 xTiny_marginRIncl advancedSearchMenu" title="#{tip.search_lblAdvancedSearch}" value="#{ApplicationBean.appContext}AdvancedSearchPage.jsp" rendered="#{!AdvancedSearch.disableAdvancedSearch}">
-		<span><h:outputText value="#{lbl.search_lblAdvancedSearch}"/></span>
-	</h:outputLink>--%>
 	<h:commandLink id="lnkAdvancedSearch" styleClass="medium_area0_p3 advancedSearchMenu" title="#{tip.search_advanced}" immediate="true" rendered="#{!AdvancedSearch.disableAdvancedSearch}" action="#{AdvancedSearch.showSearchPage}">
 		<h:outputText value="#{lbl.search_lblAdvancedSearch}"/>
 	</h:commandLink>
 
-	<%--<h:outputLink styleClass="medium_area0_p3 organisationSearchMenu endline" title="#{tip.search_affiliationTree}" value="#{ApplicationBean.appContext}AffiliationTreePage.jsp">
-		<span><h:outputText value="#{lbl.mainMenu_lnkBrowseByAffiliation}"/></span>
-	</h:outputLink>--%>
-	<h:commandLink styleClass="medium_area0_p3 organisationSearchMenu endline" id="lnkBrowseByAffiliation" title="#{tip.search_byAffiliation}" immediate="true" action="#{Navigation.loadAffiliationTree}">
-		<h:outputText value="#{lbl.mainMenu_lnkBrowseByAffiliation}"/>
+	<h:commandLink styleClass="small_area0_p3 organisationSearchMenu endline" id="lnkBrowseBy" title="#{tip.BrowseBy}" immediate="true" action="#{BrowseByPage.loadBrowseBy}">
+		<h:outputText value="Browse By"/>
 	</h:commandLink>
 	<!-- search Menu ends here -->
 </div>
