--- a/pubman/pubman_presentation/src/main/webapp/viewItem/BasicGroup.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/viewItem/BasicGroup.jspf
@@ -36,7 +36,7 @@
 		<h:outputText id="lblViewItemFull_lblBasic" value="#{lbl.ViewItemFull_lblBasic}" />
 	</h3>
 	<span class="seperator"></span>
-	<div class="free_area0 itemBlockContent endline">
+	<div class="free_area0  endline">
 
 <%-- Citation URL --%>
 		<div class="free_area0 endline itemLine noTopBorder" >
