--- a/pubman/pubman_presentation/src/main/webapp/resources/eSciDoc_CSS_v2/themes/skin_PubMan/styles/images.css
+++ b/pubman/pubman_presentation/src/main/webapp/resources/eSciDoc_CSS_v2/themes/skin_PubMan/styles/images.css
@@ -520,6 +520,42 @@
 		}
 	}
 	
+	.left {
+		background-image: url('../images/All_Paginator_ArrowPrevious_15_Active.gif');
+		background-repeat: no-repeat;
+		background-position: center left;
+	}
+	
+	.left:hover, .left:focus {
+		background-image: url('../images/All_Paginator_ArrowPrevious_15_Hover.gif');
+		background-repeat: no-repeat;
+		background-position: center left;
+	}
+	
+	.left:disabled {
+		background-image: url('../images/All_Paginator_ArrowPrevious_15_Deactivated.gif');
+		background-repeat: no-repeat;
+		background-position: center left;
+	}
+	
+	.right {
+		background-image: url('../images/All_Paginator_ArrowNext_15_Active.gif');
+		background-repeat: no-repeat;
+		background-position: center left;
+	}
+	
+	.right:hover, .right:focus {
+		background-image: url('../images/All_Paginator_ArrowNext_15_Hover.gif');
+		background-repeat: no-repeat;
+		background-position: center left;
+	}
+	
+	.right:disabled {
+		background-image: url('../images/All_Paginator_ArrowNext_15_Deactivated.gif');
+		background-repeat: no-repeat;
+		background-position: center left;
+	}
+	
 	.add, .remove {
 		background-color: #ffffff;
 	}
