--- a/pubman/pubman_presentation/src/main/webapp/resources/eSciDoc_CSS_v2/eSciDoc_global_css/eSciDoc_core_em.css
+++ b/pubman/pubman_presentation/src/main/webapp/resources/eSciDoc_CSS_v2/eSciDoc_global_css/eSciDoc_core_em.css
@@ -231,6 +231,7 @@
 				margin-right: 1px;
 				padding: 0px;
 				background-position: center center;
+				background-color: inherit;
 			}
 			
 			.min_imgBtn, .std_imgBtn, .big_imgBtn {
