--- a/pubman/pubman_presentation/src/main/webapp/resources/eSciDoc_CSS_v2/themes/skin_PubMan/styles/images.css
+++ b/pubman/pubman_presentation/src/main/webapp/resources/eSciDoc_CSS_v2/themes/skin_PubMan/styles/images.css
@@ -712,19 +712,19 @@
 		background-position: center left;
 	}
 	
-	.visibility {
+	.visibilityIcon {
 		background-image: url('../images/Virr_Visibility_EyeTrue_15_Active.gif');
 		background-repeat: no-repeat;
 		background-position: center center;
 	}
 	
-	.visibility:hover, .visibility:focus {
+	.visibilityIcon:hover, .visibilityIcon:focus {
 		background-image: url('../images/Virr_Visibility_EyeTrue_15_Hover.gif');
 		background-repeat: no-repeat;
 		background-position: center center;
 	}
 	
-	.visibility:disabled {
+	.visibilityIcon:disabled {
 		background-image: url('../images/Virr_Visibility_EyeTrue_15_Deactivated.gif');
 		background-repeat: no-repeat;
 		background-position: center center;
